assets/css/style.css
/*  Our default values set as CSS variables  */
:root {
  --white: #fff;
  --color-text-primary: #828282;
  --color-text-secondary: #333;
  --color-primary: #fdc435;
  --color-secondary: #cc9fd0;
}

/*  Basic page style resets  */

* {
  box-sizing: border-box;
}

body {
  font-family: "Nunito", sans-serif !important;
  color: var(--color-text-primary) !important;
}

a {
  color: var(--color-primary);
  text-decoration: none;
}

a:hover {
  color: var(--color-primary);
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif;
  color: var(--color-text-secondary);
}

/*  Reusable page style  */

.heading {
  position: relative;
  font-size: 48px;
  font-weight: 700;
  padding-bottom: 5px;
  margin-bottom: 58px;
  text-align: center;
}

.heading::after {
  content: " ";
  position: absolute;
  top: 100%;
  left: 50%;
  width: 100px;
  border: 2px solid var(--color-primary);
  background-color: var(--color-primary);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
  transform: translateX(-50%);
}

.separator {
  margin-bottom: 100px;
}

/* --------------------------------------------------------------
# Back to top button
-------------------------------------------------------------- */

.back-to-top {
  position: fixed;
  visibility: hidden;
  opacity: 0;
  right: 15px;
  bottom: 15px;
  z-index: 99999;
  background: #213b52;
  width: 40px;
  height: 40px;
  border-radius: 50px;
  transition: all 0.4s;
}

.back-to-top i {
  font-size: 24px;
  color: var(--white);
  line-height: 0;
}

.back-to-top:hover {
  background: var(--color-primary);
  color: var(--white);
}

.back-to-top.active {
  visibility: visible;
  opacity: 1;
}

/* --------------------------------------------------------------
# Disable aos animation delay on mobile devices
-------------------------------------------------------------- */

@media screen and (max-width: 768px) {
  [data-aos-delay] {
    transition-delay: 0 !important;
  }
}

/* --------------------------------------------------------------
# Header
-------------------------------------------------------------- */

.header-content {
  display: flex;
  justify-content: flex-end;
  padding: 10px 70px;
}

/* --------------------------------------------------------------
# Navigation Menu
-------------------------------------------------------------- */

/**
* Desktop Navigation
*/

.navbar {
  padding: 0;
  z-index: 50;
}

.navbar ul {
  margin: 0;
  padding: 0;
  display: flex;
  list-style: none;
  align-items: center;
}

.navbar li {
  position: relative;
}

.navbar a {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 20px 10px 0;
  font-size: 1.4em;
  color: var(--white);
  white-space: nowrap;
  transition: 0.3s;
  font-family: "Nunito", sans-serif;
}

.navbar a:hover {
  color: var(--color-primary);
}

.navbar a:focus {
  color: var(--white);
}

.navbar a i {
  font-size: 12px;
  line-height: 0;
  margin-left: 5px;
}

.navbar .getstarted {
  color: var(--white);
  padding: 4px 25px 6px 25px;
  margin-left: 30px;
  border-radius: 50px;
  border: 2px solid var(--color-primary);
}

.navbar .getstarted:hover {
  background: var(--color-primary);
  color: #213b52;
}

.navbar .dropdown ul {
  display: block;
  position: absolute;
  left: 14px;
  top: calc(100% + 30px);
  margin: 0;
  padding: 10px 0;
  z-index: 99;
  opacity: 0;
  visibility: hidden;
  background: var(--white);
  box-shadow: 0 0 30px rgba(127, 137, 161, 0.25);
  transition: 0.3s;
  border-radius: 4px;
}

.navbar .dropdown ul li {
  min-width: 200px;
}

.navbar .dropdown ul a {
  padding: 10px 20px;
  font-size: 14px;
  text-transform: none;
  font-weight: 500;
  color: #3e6f9b;
}

.navbar .dropdown ul a i {
  font-size: 12px;
}

.navbar .dropdown ul a:hover,
.navbar .dropdown ul .active:hover,
.navbar .dropdown ul li:hover > a {
  color: #fdc134;
}

.navbar .dropdown:hover > ul {
  opacity: 1;
  top: 100%;
  visibility: visible;
}

.navbar .dropdown .dropdown ul {
  top: 0;
  left: calc(100% - 30px);
  visibility: hidden;
}

.navbar .dropdown .dropdown:hover > ul {
  opacity: 1;
  top: 0;
  left: 100%;
  visibility: visible;
}

@media (max-width: 1366px) {
  .navbar .dropdown .dropdown ul {
    left: -90%;
  }

  .navbar .dropdown .dropdown:hover > ul {
    left: -100%;
  }
}

/**
* Mobile Navigation
*/

.navbar-mobile a {
  padding: 10px 20px;
  font-size: 15px;
  color: #213b52;
}

.navbar-mobile .getstarted {
  margin: 15px;
  display: block;
  border: 0;
}

.navbar-mobile ul {
  display: block;
  position: absolute;
  top: 55px;
  right: 15px;
  bottom: 15px;
  left: 15px;
  padding: 10px 0;
  border-radius: 10px;
  background-color: var(--white);
  overflow-y: auto;
  transition: 0.3s;
}

.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover > a {
  color: #fdc134;
}

.navbar-mobile .dropdown ul {
  position: static;
  display: none;
  margin: 10px 20px;
  padding: 10px 0;
  z-index: 99;
  opacity: 1;
  visibility: visible;
  background: var(--white);
  box-shadow: 0 0 30px rgba(127, 137, 161, 0.25);
}

.navbar-mobile .dropdown ul a {
  padding: 10px 20px;
}

.navbar-mobile .dropdown ul a:hover,
.navbar-mobile .dropdown ul .active:hover,
.navbar-mobile .dropdown ul li:hover > a {
  color: #fdc134;
}

.mobile-nav-toggle {
  color: #fdc134;
  font-size: 28px;
  cursor: pointer;
  display: none;
  line-height: 0;
  transition: 0.5s;
  position: fixed;
  right: 15px;
  top: 15px;
  z-index: 9998;
  border: 0;
}

@media (max-width: 991px) {
  .mobile-nav-toggle {
    display: block;
  }

  .navbar ul {
    display: none;
  }
}

.navbar-mobile {
  position: fixed;
  overflow: hidden;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(18, 33, 46, 0.9);
  transition: 0.3s;
  z-index: 999;
}

.navbar-mobile .mobile-nav-toggle {
  position: absolute;
  top: 15px;
  right: 15px;
}

.navbar-mobile .dropdown ul li {
  min-width: 200px;
}

.navbar-mobile .dropdown ul a i {
  font-size: 12px;
}

.navbar-mobile .dropdown > .dropdown-active {
  display: block;
}

/* --------------------------------------------------------------
# About
-------------------------------------------------------------- */

.about .content {
  padding: 30px 0;
}

.about .content h3 {
  font-weight: 700;
  font-size: 34px;
  color: #213b52;
}

.about .content p {
  margin-bottom: 0;
}

.about .content .icon-box {
  margin-top: 25px;
}

.about .content .icon-box h4 {
  font-size: 20px;
  font-weight: 700;
  margin: 5px 0 10px 60px;
  color: #213b52;
}

.about .content .icon-box h4 a {
  color: #213b52;
  transition: 0.3s;
}

.about .content .icon-box h4 a:hover {
  color: #fdc134;
}

.about .content .icon-box i {
  font-size: 48px;
  float: left;
  color: #fdc134;
}

.about .content .icon-box p {
  font-size: 15px;
  color: #848484;
  margin-left: 60px;
}

.about .image {
  background: url("../img/about.jpg") center center no-repeat;
  background-size: cover;
  min-height: 400px;
}

@media (max-width: 667px) {
  .about .image img {
    max-width: 100%;
  }
}

/* --------------------------------------------------------------
# Intro Section
-------------------------------------------------------------- */

#main-section {
  width: 100%;
  padding: 0 0 0 0;
}

.intro h1 {
  font-size: 48px;
  font-weight: 700;
  line-height: 80px;
  margin-bottom: 30px;
}

@media (min-width: 992px) {
  .intro h1 {
    font-size: 64px;
  }
}

.intro-text,
.about-text,
.project-text {
  color: var(--color-text-primary);
  font-size: 24px;
  line-height: 36px;
  text-align: justify;
}

.indented {
  text-indent: 50px;
}

.intro {
  min-height: 800px;
  height: auto;
}

.intro-img {
  width: 100%;
}

@media (min-width: 992px) {
  .intro-img-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 20;
  }

  .intro-img {
    width: 700px;
    mask-size: 700px;
    -webkit-mask-size: 700px;
    mask-image: url(../img/mask.svg);
    -webkit-mask-image: url(../img/mask.svg);
    mask-position: center;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
  }
}

@media (min-width: 1440px) {
  .intro-img {
    width: 800px;
    mask-image: url(../img/mask.svg);
    -webkit-mask-image: url(../img/mask.svg);
    mask-position: center;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
    mask-size: 800px;
    -webkit-mask-size: 800px;
  }

  .intro {
    min-height: 850px;
  }
}

.start-button {
  display: flex;
  margin: 0;
  padding: 10px 20px;
  border: 0;
  border-radius: 4px;
  font-family: "Poppins", helvetica, sans-serif;
  background-color: var(--color-primary);
  cursor: pointer;
  overflow: hidden;
  place-items: center;
  margin-top: 70px;
}

span.play-button {
  font-size: 1.4em;
  font-weight: 400;
}

.rocket {
  width: 60px;
  height: 34px;
  margin-left: 10px;
  background: url("../img/rocket.png") right center no-repeat;
  background-size: 60px;
}

.start-button:hover .rocket {
  animation: shake 0.5s;
  animation-iteration-count: infinite;
}

#main-section .btn-get-started:hover {
  background: transparent;
  color: #fdc134;
}

/* --------------------------------------------------------------
# Contacts Menu
-------------------------------------------------------------- */

/**
* Desktop Navigation
*/

h6.contacts {
  color: var(--color-text-secondary) !important;
}

img.logo-seci {
  width: 130%;
  height: 100%;
}

img.logo-wit {
  width: 80%;
  height: 60%;
  margin-top: 25px;
  margin-left: 35px;
}

img.logo-ardc {
  margin-top: 10px;
  width: 80%;
  height: 80%;
  margin-right: 10px;
}

img.logo-designer {
  margin-top: 10px;
  width: 80%;
  height: 80%;
  margin-left: 10px;
}

img.logo-ces {
  width: 110%;
  height: 80%;
  margin-top: 10px;
}

img.logo-support {
  width: 100%;
  height: 100%;
}

/* --------------------------------------------------------------
# Footer
-------------------------------------------------------------- */

.footer {
  background-image: url("../img/footer-new.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top left;
  height: 400px;
  margin: 0 !important;
  position: relative;
  width: 100%;
}

.footer-text {
  position: absolute;
  bottom: 20px;
  width: 100%;
  text-align: right;
  text-align: center;
  font-size: 16px;
  color: black;
}

@media (max-width: 768px) {
  .footer-text {
    padding: 0px 15px;
  }
}

.copy-logo {
  width: 25px;
  height: 25px;
  margin-bottom: 5px;
}

/* --------------------------------------------------------------
# Animations
-------------------------------------------------------------- */

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }

  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }

  20% {
    transform: translate(-3px, 0) rotate(1deg);
  }

  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }

  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }

  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }

  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }

  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }

  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }

  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }

  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

@-webkit-keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes animate-loading {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

